fixed horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     font-size: 13px;
   }
 
+body {
+    padding: 0;
+    margin: 0;
+ }
+
 ul {
     list-style-type: none;
     margin: 0;
